add header block elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,3 +1,11 @@
+<h1>My first web page</h1>
+<h2>Written with the guidance of Epicodus</h2>
+<h3>How do I control the size of the text? How about the font?</h3>
+
+
+
+
+
 <p>This is my first web page!</p>
 <p>Isn't it nice?<p>
 <p>It can say anything I want it to say!!</p>
