Add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,3 +9,10 @@
 <p>This is my first web page!</p>
 <p>Isn't it nice?<p>
 <p>It can say anything I want it to say!!</p>
+<p>Here are some things I'm going to learn about coding:</p>
+<ol>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And a lot more!</li>
+</ol>
