--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web Page #1</title>
+</head>
+<body>
 <h1>My first web page</h1>
 <h2>Written with the guidance of Epicodus</h2>
 <h3>How do I control the size of the text? How about the font?</h3>
-
-
 
 
 
@@ -16,3 +20,5 @@
   <li>JavaScript</li>
   <li>And a lot more!</li>
 </ol>
+  </body>
+</html>
