add links and images to pages

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My Favorite Things</h1>
-    <h2>There are some of my favorite things</h2>
+    <h2>Here are some of my favorite things</h2>
 
     <h3>People:</h3>
     <p>Here are some of my favorite people!</p>
@@ -41,8 +41,11 @@
       <li>Probably some other places that I forgot!</li>
     </ul>
 
+    <p> Here is a link to my <a href="my-first-webpage.html"> my first webpage</a>.</p>
+
+
     <h3>Thank you so much for reading and please HIT THE DONATE BUTTON</h3>
+    <p>Check out <a href="https://github.com/TomVrabel/Cookie-Recipe">Tom's Github Account</a>. Edit my formatting so I can code better in HTML</p>
+    <img src="Img/Tomphoto.jpg" alt="Tom at the Golden Gate Bridge">
   </body>
-
-
 </html>
