add image of bike

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -25,7 +25,8 @@
     <ul>
       <li>Raleigh One Way Road Bike</li>
       <li>Red Line Mono Cog Mountain Bike</li>
-      <li>Wellcraft 1988. This one is a boat but it's the same idea</li>
+      <p><img src="img/bike.jpg" alt="Tom's Redline Monocog bike"></p>
+      <li><em>Wellcraft 1988. This one is a boat but it's the same idea</em></li>
     </ul>
 
     <h3>Traveling</h3>
