--- a/favorite-things.html
+++ b/favorite-things.html
@@ -36,7 +36,7 @@
       <li>South Korea in April 2016</li>
       <li>San Francisco and Portland in October 2015</li>
       <li>Minneapolis in July 2015</li>
-      <li>Colombia in February 2015</li>
+      <li><a href="colombia-photo-album.html"> Colombia in February 2015</a></li>
       <li>Germany in October 2014</li>
       <li>Iceland in August 2014</li>
       <li>Probably some other places that I forgot!</li>
