created css stylings

--- a/colombia-photo-album.html
+++ b/colombia-photo-album.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <Title>Tom's Photobook in Colombia </Title>
+    <link href="css/styles.css" rel="Stylesheet" type="text/css">
   </head>
   <body>
     <h1>Tom's Photobook in Colombia</h1>
@@ -13,6 +14,6 @@
     <p><img src="img/snackin.jpg" alt="snackin hard" height="300" width="450"></p>
     <p>Snacking on mango provides you with the energy needed to be a cool guy who travels</p>
     <p><img src="img/just coolin.jpg" alt="Just coolin" height="300" width="450"></p>
-    <p>Sometimes you just need to wear your sunglasses inside.</p>
+    <p>Sometimes you just need to wear your sunglasses <em>inside</em>.</p>
   </body>
 </html>
