--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="Stylesheet" type="text/css">
     <title>Tom's Favorite things</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <li>Julia "Ju Ju" Conte</li>
       <li>Ryan "Ribald" Harvey</li>
       <li>Toby "Pbatement" Twiss</li>
-      <li><i>Fictional Friends:</i></li>
+      <li><em>Fictional People:</em></li>
         <ul>
           <li>Nelson 'Bag Head' Bighetti </li>
           <li>Donald 'Jared' 'He Fucks' Dunn</li>
