--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="Stylesheet" type="text/css">
     <title>Web Page #1</title>
 </head>
 
@@ -22,5 +23,5 @@
   <li>And a lot more!</li>
 </ol>
   </body>
-  
+
 </html>
