fixed some spacing issues

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -8,25 +8,22 @@
     <h1>My Favorite Places</h1>
     <h2>These are the places that make me the happiest</h2>
 
-    <p><div class="container"><img src="img/crater lake.jpg" alt="Picture of Crater Lake" heigh="400" width="450"></div></p>
+    <p><img class="container" src="img/crater lake.jpg" alt="Picture of Crater Lake"></p>
     <h3>Crater Lake</h3>
-    <p>Crater Lake is one of the most beautiful places I have been to.</p>
-    <p>You can learn more about them over at their <a href= "https://www.nps.gov/crla/index.htm">website </a>.</p>
+    <p class="break">Crater Lake is one of the most beautiful places I have been to. You can learn more about them over at their <a href= "https://www.nps.gov/crla/index.htm">website</a>.</p>
 
-    <p><img src="img/Sagrada Familia.jpg" alt="Tooth Pic Sculpture of Sagrada Familia" height="400" width="450"></p>
+    <p><img class="container" src="img/Sagrada Familia.jpg" alt="Tooth Pic Sculpture of Sagrada Familia"></p>
     <h3>Sagrada Familia</h3>
-    <p>I have seen many churches and many impressive feats of human engineering.</p>
-    <p>The Sagrada Familia is the most impressive of them all. Learn
-    more <a href= "https://en.wikipedia.org/wiki/Sagrada_Fam%C3%ADlia">here</a>.</p>
-    <p>This is actually a tooth pick scultupre that someone made of it. That was also impressive.</p>
+    <p class="break">I have seen many <span class="church"> churches </span> and many impressive feats of human engineering.The Sagrada Familia is the most impressive of them all. Learn
+    more <a href= "https://en.wikipedia.org/wiki/Sagrada_Fam%C3%ADlia">here</a>. This is actually a tooth pick scultupre that someone made of it. That was also impressive.</p>
 
-    <p><img src="img/redwoods.jpg" alt="Redwood Trees" height="650" width="450"></p>
+    <p><img class="container" src="img/redwoods.jpg" alt="Redwood Trees"></p>
     <h3>The Redwoods</h3>
-    <p>There is something very calming about hiking in a forest that is <em>hundreds</em> of years old.</p>
+    <p class="break">There is something very calming about hiking in a forest that is <em>hundreds</em> of years old.</p>
 
-    <p><img src="img/myhouse.jpg" alt="My House" height="600" width "450"></p>
+    <p><img class="container"src="img/myhouse.jpg" alt="My House"></p>
     <h3>My House</h3>
-    <p>I would be remiss if I didn't mention my house. This isn't the best picture but at the end
+    <p class="break">I would be remiss if I didn't mention my house. This isn't the best picture but at the end
     of the day there really is no place like home.</p>
   </body>
 </html>
